# Bodybuilding

./: .env.example  .gitignore  BRENNAN_AUDIT.md  CALCULATIONS.md  DASHBOARD_UX_IMPROVEMENTS.md  README.md  VERIFY_ALGORITHMS.md  docker-compose.override.yml  docker-compose.yml  plan.md
backend/: Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7850f1556da9_initial_schema.py  a1b2c3d4e5f6_block0_schema_additions.py  b2c3d4e5f6a7_replace_exercise_database.py  c047a75d24f4_add_advanced_measurement_columns.py  d6e44051452a_add_profile_preferences_and_exercise_.py  e3f4a5b6c7d8_add_training_time_anchor.py  f4a5b6c7d8e9_add_rpe_technique_tempo.py  g5b6c7d8e9f0_add_recovery_signals.py  h6c7d8e9f0a1_add_telegram_bot_token.py  i7d8e9f0a1b2_add_notification_log.py  j8e9f0a1b2c3_add_healthkit_api_keys.py  k9f0a1b2c3d4_add_session_feedback_and_coaching.py  (+5 more)
backend/app/: config.py  database.py  dependencies.py  main.py
backend/scripts/: adjust_bf.py  audit_direct.py  audit_tool.py  audit_user.py  e2e_pipeline_test.py  list_users.py  reseed_admin.py
backend/tests/: test_ceiling_ensemble.py  test_classic_audit.py  test_coaching_alignment.py  test_constants.py  test_engine1.py  test_engine2.py  test_engine2_full.py  test_engine3.py  test_engine3_full.py  test_exercise_priorities.py  test_girth_projection.py  test_hqi_visibility.py  test_illusion_metrics.py  test_logistic_gains.py  test_mens_physique_188cm.py  test_multi_week_simulation.py  test_physio_provenance.py  test_readiness_stage_weight.py  test_sprint_v3.py
(+198 files in other folders)
